Fix nav pills double border issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -848,9 +848,3 @@ label {
   }
 }
 
-// Navigation container with border
-.navigation-container {
-  .nav-pills {
-    border-bottom: 1px solid light-dark(#E4E4E7, #27272A);
-  }
-}
